tests/errors/syntax_separation.out
Error in tests/errors/syntax_separation.sad:
  [E2001] File tests/errors/syntax_separation.sad, line 1
    a = 1 b = 2
          ^
Invalid Syntax Error: Expected newline to separate statements
